# GradientDialog

./: CMakeLists.txt  README.md  gradient_dialog.cc  gradient_dialog.h  gradient_dialog.ui  gradient_dialog_demo.cc  gradient_edit.cc  gradient_edit.h  gradient_stops_edit.cc  gradient_stops_edit.h  gradient_variant.cc  gradient_variant.h
.github/workflows/: cmake.yml
